[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/GameOver.wav" type="AudioStream" id=4]
[ext_resource path="res://TheRiver.ogg" type="AudioStream" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 541 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="game_complete" from="." to="HUD" method="_on_Game_game_complete"]
[connection signal="hide_instructions" from="." to="HUD" method="_on_Game_hide_instructions"]
[connection signal="show_instructions" from="." to="HUD" method="_on_Game_show_instructions"]
[connection signal="lose_life" from="Level" to="HUD" method="_on_Level_lose_life"]
[connection signal="win_level" from="Level" to="." method="_on_Level_win_level"]
[connection signal="destroy_game" from="HUD" to="." method="_on_HUD_destroy_game"]
[connection signal="game_over" from="HUD" to="." method="_on_HUD_game_over"]
[connection signal="new_game" from="HUD" to="." method="_on_HUD_new_game"]
[connection signal="new_level" from="HUD" to="." method="_on_HUD_new_level"]
